cp: 	PR c++/3716 	* pt.c (tsubst_aggr_type): Move pmf handling into tsubst. 	(tsubst, case POINTER_TYPE): Handle pmfs here. 	(tsubst, case OFFSET_TYPE): Check it is not an offset to 	reference. If it is offset to FUNCTION_TYPE, create a METHOD_TYPE. testsuite: 	* g++.dg/template/ptrmem1.C: New test. 	* g++.dg/template/ptrmem2.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48471 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.dg/template/ptrmem1.C: New test.
+	* g++.dg/template/ptrmem2.C: New test.
+
 	* g++.dg/template/ntp.C: New test.
 
 	* g++.dg/other/component1.C: New test.
