PR c++/5089 	* doc/invoke.texi (-Wold-style-cast): Only warn about non-void casts. cp: 	PR c++/5089 	* decl2.c (reparse_absdcl_as_casts): Don't warn about casts to void. testsuite: 	* g++.dg/warn/oldcast1.C: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48472 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/5089
+	* doc/invoke.texi (-Wold-style-cast): Only warn about non-void casts.
+
 2002-01-02  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/fixunssfsi.c: Update copyright.
