--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	PR c++/5089
+	* decl2.c (reparse_absdcl_as_casts): Don't warn about casts to void.
+
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
 	PR c++/3716
 	* pt.c (tsubst_aggr_type): Move pmf handling into tsubst.
 	(tsubst, case POINTER_TYPE): Handle pmfs here.
