--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* g++.dg/warn/oldcast1.C: New test.
+
 	* g++.dg/template/ptrmem1.C: New test.
 	* g++.dg/template/ptrmem2.C: New test.
 
