2002-1-1  Andrew Pinski  <pinskia@physics.uc.edu>
	* libjava/java/lang/ieeefp.h: Define __IEEE_BIG_ENDIAN for
	PPC Darwin, not for all of Darwin.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48473 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-1-1  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* libjava/java/lang/ieeefp.h: Define __IEEE_BIG_ENDIAN for
+	PPC Darwin, not for all of Darwin.
+
 2001-12-29 Andreas Tobler <a.tobler@schweiz.ch>
 
 	* libjava/java/lang/ieeefp.h: Define __IEEE_BIG_ENDIAN for
