--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,11 @@
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
+	PR c++/5116, c++/764 reversion
+	* call.c (build_new_op): Revert the instantiations. They are
+	incorrect.
+	
+2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
+
 	PR c++/5089
 	* decl2.c (reparse_absdcl_as_casts): Don't warn about casts to void.
 
