* java/lang/ieeefp.h: Fix bug in my hand-application of previous 	patch.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48475 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-02  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/ieeefp.h: Fix bug in my hand-application of previous
+	patch.
+
 2002-1-1  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* libjava/java/lang/ieeefp.h: Define __IEEE_BIG_ENDIAN for
