* c-decl.c (c_expand_body): Call outlining_inline_function when         emitting an inline function out of line.
        * semantics.c (expand_body): Call outlining_inline_function when
        emitting an inline function out of line.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48479 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-02  Jason Merrill  <jason@redhat.com>
+
+	* c-decl.c (c_expand_body): Call outlining_inline_function when
+	emitting an inline function out of line.
+
 2002-01-02  Richard Henderson  <rth@redhat.com>
 
 	* dwarf2out.c (limbo_die_node): Add created_for member.
