--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-02  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/t-aix43: Revert previous change.
+
 2002-01-02  Jason Merrill  <jason@redhat.com>
 
 	* c-decl.c (c_expand_body): Call outlining_inline_function when
