* gcc.c (default_compilers): Const-ify. 	* mips-tdump.c (stab_names): Likewise. 	* mips-tfile.c (map_coff_types, map_coff_storage, 	map_coff_sym_type, map_coff_derived_type, stabs_symbol, 	pseudo_ops_t, pseudo_ops): Likewise. 	* protoize.c (default_include): Likewise
f:
	* com.c (clear_binding_level): Const-ify.
	(ffecom_arglist_expr_): Likewise.
	* info.c (ffeinfo_types_): Don't needlessly zero init.
	* lex.c (ffelex_hash_kludge): Const-ify.

java:
	* parse.y (src_parse_roots): Don't needlessly zero init.

libiberty:
	* cp-demangle.c (long_options): Const-ify.
	* cplus-dem.c (long_options): Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48485 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* parse.y (src_parse_roots): Don't needlessly zero init.
+
 2001-12-31  Tom Tromey  <tromey@redhat.com>
 
 	* parse.y (dump_java_tree): New function.
