--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* cp-demangle.c (long_options): Const-ify.
+	* cplus-dem.c (long_options): Likewise.
+
 	* cplus-dem.c (mystrstr): Delete.  All callers changed to use
 	strstr instead.
 
