--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-02  Richard Henderson  <rth@redhat.com>
+
+	* objc/objc-act.c (hack_method_prototype): Clear current_function_decl
+	after abusing it.
+
 2002-01-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.c (default_compilers): Const-ify.
