--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-02  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-typeck.c (output_init_element): Allow initializing static storage
+	duration objects with compound literals.
+
 2002-01-02  Richard Henderson  <rth@redhat.com>
 
 	* objc/objc-act.c (hack_method_prototype): Clear current_function_decl
