--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-02  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/gnu89-init-1.c: Added new tests.
+
 2002-01-02  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.dg/template/friend2.C: Remove as patch is reverted.
