--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -5,6 +5,12 @@
 	* Makefile.in: Update copyright date.
 	Update dependency.
 
+2002-01-02  Craig Rodrigues  <rodrigc@gcc.gnu.org>
+
+	PR c/5226
+	* invoke.texi (-mthreads): Remove from documented RS/6000 options.
+	(-pthread) Add to RS/6000 options.
+
 2002-01-02  Kazu Hirata  <kazu@hxi.com>
 
 	* except.c: Fix comment typos.
