* config/avr/avr.c: Fix comment typos. 	* config/c4x/c4x.md: Likewise. 	* config/dsp16xx/dsp16xx.h: Likewise. 	* config/dsp16xx/dsp16xx.md: Likewise. 	* config/i386/i386.md: Likewise. 	* config/ia64/ia64.c: Likewise. 	* config/m32r/m32r.h: Likewise. 	* config/m68hc11/m68hc11.md: Likewise. 	* config/mmix/mmix.c: Likewise. 	* config/mn10200/mn10200.c: Likewise. 	* config/romp/romp.c: Likewise. 	* config/sh/sh.c: Likewise. 	* config/stormy16/stormy16.c: Likewise. 	* config/stormy16/stormy16.h: Likewise. 	* config/stormy16/stormy16.md: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48496 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -1,5 +1,5 @@
 ;; GCC machine description for IA-32 and x86-64.
-;; Copyright (C) 1988, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001
+;; Copyright (C) 1988, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002
 ;; Free Software Foundation, Inc.
 ;; Mostly by William Schelter.
 ;; x86_64 support added by Jan Hubicka
@@ -2113,7 +2113,7 @@
 	(match_operand:QI 1 "general_operand" ""))]
   "! TARGET_PARTIAL_REG_STALL"
 {
-  /* Don't generate memory->memory moves, go through a register */
+  /* Don't generate memory->memory moves, go through a register.  */
   if (GET_CODE (operands[0]) == MEM && GET_CODE (operands[1]) == MEM)
     operands[1] = force_reg (QImode, operands[1]);
 })
