--- a/gcc/config/m68hc11/m68hc11.md
+++ b/gcc/config/m68hc11/m68hc11.md
@@ -1,5 +1,5 @@
 ;;- Machine description file for Motorola 68HC11 and 68HC12.
-;;- Copyright (C) 1999, 2000, 2001 Free Software Foundation, Inc.
+;;- Copyright (C) 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
 ;;- Contributed by Stephane Carrez (stcarrez@worldnet.fr)
 
 ;; This file is part of GNU CC.
@@ -1596,7 +1596,7 @@
     }
   else
     {
-      /* X can be used as a indexed addressing in the source.
+      /* X can be used as an indexed addressing in the source.
          Get the value before clearing it.  */
       x_reg_used = reg_mentioned_p (ix_reg, operands[1]);
       if (x_reg_used)
