* gcc/jcf-parse.c: Update copyright date.         (yyparse): Constify resource_filename.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48500 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-03  Graham Stott  <grahams@redhat.com>
+
+        * gcc/jcf-parse.c: Update copyright date.
+        (yyparse): Constify resource_filename.
+
 2002-01-02  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* parse.y (src_parse_roots): Don't needlessly zero init.
