--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-03  Kazu Hirata  <kazu@hxi.com>
+
+	* gcse.c: Fix formatting.
+
 2002-01-03  Graham Stott  <grahams@redhat.com>
 
 	* mkconfig.sh: Output to config.h, hconfig.h and tconfig.h
