--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/other/debug2.C: New test.
+
 2002-01-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/gnu89-init-1.c: Added new tests.
