--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-03  Turly O'Connor  <turly@apple.com>
+	* darwin.c (machopic_output_possible_stub_label): Don't generate
+	stub routines for pseudo-stubs which we've just defined.
+
 2002-01-03  Kazu Hirata  <kazu@hxi.com>
 
 	* builtins.c: Fix formatting.
