* simplify-rtx.c (simplify_binary_operation) [DIV]: If 	gen_lowpart_common fails, use gen_lowpart_SUBREG.
	* gcc.c-torture/compile/20020103-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48514 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* g++.dg/other/debug2.C: New test.
 
+	* gcc.c-torture/compile/20020103-1.c: New test.
+
 2002-01-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/gnu89-init-1.c: Added new tests.
