--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,10 @@
+2002-01-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* simplify-rtx.c (simplify_binary_operation) [DIV]: If
+	gen_lowpart_common fails, use gen_lowpart_SUBREG.
+
 2002-01-03  Turly O'Connor  <turly@apple.com>
+
 	* darwin.c (machopic_output_possible_stub_label): Don't generate
 	stub routines for pseudo-stubs which we've just defined.
 
