Correct ChangeLog entry: toc_section -> ASM_FILE_START.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48517 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -38,7 +38,7 @@
 	* config/rs6000/rs6000.c (first_reg_to_save): Likewise.
 	(rs6000_stack_info): Likewise.
 	* config/rs6000/sysv4.h (ASM_DECLARE_FUNCTION_NAME): Likewise.
-	* config/rs6000/xcoff.h (toc_section): Likewise.
+	* config/rs6000/xcoff.h (ASM_FILE_START): Likewise.
 	* config/v850/v850.c (compute_register_save_size): Likewise.
 
 2002-01-03  Jakub Jelinek  <jakub@redhat.com>
