--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-03  Richard Henderson  <rth@redhat.com>
+
+	* gcc.dg/20020103-1.c: New.
+
 2002-01-03  Kazu Hirata  <kazu@hxi.com>
 
 	* gcc.c-torture/execute/20020103-1.c: New test.
