--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-04  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gcc.dg/20020103-1.c: Fix typo in target selector.
+
 2002-01-03  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/20020103-1.c: New.
