--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-03  Loren J. Rittle  <ljrittle@acm.org>
+
+	* Makefile.in ($(LIBG2C):): Let libtool decide when to add -lc.
+
 2001-12-04  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in ($(LIBG2C)): Fix -rpath argument to libtool.
