* config/pa/elf.h (ASM_FILE_START): Reverted to profile_flag. 	* config/pa/pa-linux.h (ASM_FILE_START): Likewise. 	* config/pa/pa64-hpux.h (ASM_FILE_START): Likewise. 	* config/pa/som.h (ASM_FILE_START): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48537 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-01-04  William Cohen  <wcohen@redhat.com>
+
+	* config/pa/elf.h (ASM_FILE_START): Reverted to profile_flag.
+	* config/pa/pa-linux.h (ASM_FILE_START): Likewise.
+	* config/pa/pa64-hpux.h (ASM_FILE_START): Likewise.
+	* config/pa/som.h (ASM_FILE_START): Likewise.
+
 2001-01-04  Daniel Berlin  <dan@cgsoftware.com>
 
 	* lcm.c: Include df.h.
