--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-04  Tom Tromey  <tromey@redhat.com>
+
+	* java/lang/Thread.java (stop): No longer synchronized.
+	(start): Likewise.
+
 2002-01-02  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/ieeefp.h: Fix bug in my hand-application of previous
