* doc/invoke.texi (RS/6000 and PowerPC Options): Add -mcall-gnu.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48543 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -6876,6 +6876,11 @@ operating system.
 On System V.4 and embedded PowerPC systems compile code for the
 Linux-based GNU system.
 
+@item -mcall-gnu
+@opindex mcall-gnu
+On System V.4 and embedded PowerPC systems compile code for the
+Hurd-based GNU system.
+
 @item -mcall-netbsd
 @opindex mcall-netbsd
 On System V.4 and embedded PowerPC systems compile code for the
